@@ -1,9 +1,12 @@
 package com.portingdeadmods.researchd.client.utils;
 
 import com.mojang.authlib.GameProfile;
+import com.portingdeadmods.researchd.Researchd;
 import com.portingdeadmods.researchd.data.helper.ResearchTeam;
 import com.portingdeadmods.researchd.data.helper.ResearchTeamHelper;
 import com.portingdeadmods.researchd.data.helper.ResearchTeamRole;
+import com.portingdeadmods.researchd.networking.team.ManageMemberPayload;
+import com.portingdeadmods.researchd.networking.team.ManageModeratorPayload;
 import com.portingdeadmods.researchd.networking.team.TeamSetNamePayload;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.player.LocalPlayer;
@@ -13,26 +16,30 @@ import net.neoforged.neoforge.network.PacketDistributor;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 public class ClientResearchTeamHelper {
-    private final ResearchTeam clientTeam;
-
-    public ClientResearchTeamHelper() {
+    public static ResearchTeam getTeam() {
         LocalPlayer player = Minecraft.getInstance().player;
-        this.clientTeam = ResearchTeamHelper.getResearchTeam(player);
+        return ResearchTeamHelper.getResearchTeam(player);
+    }
+    public static ResearchTeam getTeam(UUID uuid) {
+        return ResearchTeamHelper.getResearchTeamByUUID(Minecraft.getInstance().level, uuid);
     }
 
-    public void setTeamNameSynced(String name) {
-        if (!this.clientTeam.getName().equals(name)) {
-            this.clientTeam.setName(name);
+    public static void setTeamNameSynced(String name) {
+        ResearchTeam clientTeam = getTeam();
+        if (!clientTeam.getName().equals(name)) {
+            clientTeam.setName(name);
             PacketDistributor.sendToServer(new TeamSetNamePayload(name));
         }
     }
 
-    public ResearchTeamRole getPlayerRole(UUID uuid) {
-        if (this.clientTeam.isOwner(uuid)) {
+    public static ResearchTeamRole getPlayerRole(UUID uuid) {
+        ResearchTeam clientTeam = getTeam();
+        if (clientTeam.isOwner(uuid)) {
             return ResearchTeamRole.OWNER;
-        } else if (this.clientTeam.isModerator(uuid)) {
+        } else if (clientTeam.isModerator(uuid)) {
             return ResearchTeamRole.MODERATOR;
         }
         return ResearchTeamRole.MEMBER;
@@ -58,10 +65,9 @@ public class ClientResearchTeamHelper {
         return this.getPlayerRole(player.getUUID()).getPermissionLevel();
     }
 
-    public List<GameProfile> getTeamMembers() {
+    public static List<GameProfile> getTeamMembers() {
         Minecraft mc = Minecraft.getInstance();
-        LocalPlayer player = mc.player;
-        ResearchTeam researchTeam = ResearchTeamHelper.getResearchTeam(Objects.requireNonNull(player));
+        ResearchTeam researchTeam = getTeam();
 
         List<GameProfile> players;
         if (!mc.isSingleplayer()){
@@ -69,14 +75,54 @@ public class ClientResearchTeamHelper {
         } else {
             players = List.of(mc.player.getGameProfile());
         }
-        return researchTeam.getMembers().stream().map(uuid -> {
+        List<GameProfile> profiles = researchTeam.getMembers().stream().map(uuid -> {
             for (GameProfile profile : players) {
                 if (profile.getId().equals(uuid)) {
                     return profile;
                 }
             }
             return null;
-        }).toList();
+        }).collect(Collectors.toList());
+        profiles.add(ResearchTeam.DEBUG_MEMBER);
+        return profiles;
+    }
+
+    public static void removeTeamMemberSynced(GameProfile memberProfile) {
+        UUID id = memberProfile.getId();
+        ResearchTeam team = getTeam(id);
+        team.removeMember(id);
+        if (getPlayerRole(id) == ResearchTeamRole.MODERATOR) {
+            team.removeModerator(id);
+        }
+        PacketDistributor.sendToServer(new ManageMemberPayload(id, true));
+        Researchd.LOGGER.debug("Remove member {}", memberProfile.getName());
+    }
+
+    public static void promoteTeamMemberSynced(GameProfile memberProfile) {
+        switch (getPlayerRole(memberProfile.getId())) {
+            case OWNER -> {}
+            case MODERATOR -> {}
+            case MEMBER -> {
+                ResearchTeam team = getTeam(memberProfile.getId());
+                team.addModerator(memberProfile.getId());
+                PacketDistributor.sendToServer(new ManageModeratorPayload(memberProfile.getId(), false));
+            }
+        }
+        Researchd.LOGGER.debug("Promoted member {}", memberProfile.getName());
+    }
+
+    public static void demoteTeamMemberSynced(GameProfile memberProfile) {
+        switch (getPlayerRole(memberProfile.getId())) {
+            case OWNER -> {}
+            case MODERATOR -> {
+                ResearchTeam team = getTeam(memberProfile.getId());
+                team.removeModerator(memberProfile.getId());
+                PacketDistributor.sendToServer(new ManageModeratorPayload(memberProfile.getId(), true));
+            }
+            case MEMBER -> {
+            }
+        }
+        Researchd.LOGGER.debug("Demoted member {}", memberProfile.getName());
     }
 
 }
